修改配置中心，获取配置文件的地址

--- a/myconfigcenter/src/main/resources/application.properties
+++ b/myconfigcenter/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=config-server
 server.port=8008
 
-spring.cloud.config.server.git.uri=https://github.com/sirFive/springcloudgitRespo/
-spring.cloud.config.server.git.searchPaths=respo
+spring.cloud.config.server.git.uri=https://github.com/sirFive/myspringCloud/
+spring.cloud.config.server.git.searchPaths=configFile
 spring.cloud.config.label=master
 spring.cloud.config.server.git.username=ooo
 spring.cloud.config.server.git.password=
